# hetzner_ddns_bridge

./: .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
deploy/: deploy.sh  docker-compose.yml
deploy/web/: Dockerfile
hetzner_ddns/: __main__.py  api.py  models.py
