[tool.poetry]
name = "hetzner_ddns"
version = "0.1.0"
description = "A simple tool to regularly update a specific dns entry via the hetzner dns console api"
authors = ["Daniel Grießhaber <dangrie158@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
bottle = "^0.12.23"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
types-requests = "^2.28.11"
mypy = "^0.961"
black = {version = "^22.6.0", allow-prereleases = true}
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
